deployments/k8s/workloads/base/auth-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  labels:
    app: auth-service
    tier: backend
spec:
  type: ClusterIP
  selector:
    app: auth-service
  ports:
    - name: http
      port: 8081
      targetPort: http
      protocol: TCP
  sessionAffinity: None
